<resources>
    <string name="app_name">NetChat</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="send">Send</string>
    <string name="code">Code</string>
    <string name="data">Data</string>
    <string name="unique_id">Unique ID</string>
    <string name="type">Type</string>
    <string name="length">Length</string>
</resources>